Fix: Add missing imports